# crystalline-tier1

./: .gitignore  BENCHMARK_EXECUTION_COMPLETE.md  BENCHMARK_FINAL_SUMMARY.txt  CONTRIBUTING.md  GITHUB_AUTHENTICATION_GUIDE.md  GITHUB_PUBLICATION_INSTRUCTIONS.md  GITHUB_SETUP.md  LICENSE  MONETIZATION_STRATEGY.md  README.md  REPO_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
benchmarks/: BENCHMARK_INDEX.md  BENCHMARK_REPORT.md  BENCHMARK_SUMMARY.md  README.md  advanced_baseline_comparison.py  advanced_benchmark.py  benchmark_report.html  benchmark_results.json  comprehensive_benchmark.py  quick_benchmark.py  report_generator.py
crystalline/: __init__.py  api.py  backend.py
crystalline/kernels/: __init__.py  spectral.py
crystalline/licensing/: __init__.py
docs/: api-reference.md  tier1-guide.md
examples/: 1_spectral_analysis.py  2_filtering.py  3_linear_algebra.py  4_tier_access.py
tests/: __init__.py  test_crystalline.py
