[project]
name = "crystalline-tier1"
version = "5.0.0"
description = "Crystalline GPU - Tier 1 (Free, CPU-only Edition)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Crystalline Project", email = "[CONTACT_EMAIL]"}
]
keywords = ["gpu", "acceleration", "spectral", "linear-algebra", "cpu"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/crystalline-tier1"
"Bug Tracker" = "https://github.com/yourusername/crystalline-tier1/issues"
Documentation = "https://github.com/yourusername/crystalline-tier1/docs"
"Source Code" = "https://github.com/yourusername/crystalline-tier1"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
viz = [
    "matplotlib>=3.3.0",
    "TensorBoard>=2.4.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
